# DeepLearningFramework

./: .gitignore  Dockerfile  README.md  components.py  dataset.py  loss.py  main.py  network.py  pyproject.toml  requirements.txt  train.py  utils.py
dlf/: __init__.py
new_prj/: Dockerfile  pyproject.toml
new_prj/.devcontainer/: devcontainer.json
new_prj/src/: monkey_module.py
src/core/: module.py
src/dlf/: trainer.py
src/new_prj/: Dockerfile  pyproject.toml
src/new_prj/src/dl/: monkey_module.py
