[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlf-core"
version = "0.1.0"
description = "Deep Learning Framework Core - Base classes for models and trainers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Yang", email = "huyang0v0@gmail.com" }
]

keywords = ["deep-learning", "pytorch", "framework", "trainer", "module"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "tqdm>=4.65.0",
  "matplotlib>=3.7.0",
  "dataclasses-json>=0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["dlf*"]

[tool.setuptools.package-data]
dlf = ["py.typed"]